fix: trim whitespace, delete duplicated class

--- a/style.css
+++ b/style.css
@@ -42,10 +42,11 @@ body {
     max-width: 1240px;
     margin: 0 auto;
   }
-  .main-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  /* .main-container {
+    max-width: 1240px;
+    margin: 0 auto; 
+  } */
+
   .section {
     width: 50%;
     
